refactor(back): nettoyage clean code (ajout d'ingredients factorise, .toList(), @Transactional(readOnly), 409 coherent sur suppressions, OrderItemRequest)